@@ -1,4 +1,6 @@
 - edit-urpm-sources:
+  o fix enabling for the first time a medium that never was enabled
+    before (#52636)
   o ignore rpmdrake's option regarding ignoring debug media
   o prevent crashing if one click on a media checkbox while another
     one is being processed (gtk+ was reentering the callback when we
